Revision history for Perl extension Padre::Plugin::PerlTidy.

0.04
    - Add HTML export feature (HJANSEN)

0.03  Mon Dec 15 2008
    - Update for latest API

0.02  Thu Nov 27 2008
    - Use Module::Install::PadrePlugin to allow the user to install the plugin
      to their local dir
    - instead of use() Perl::Tidy, require() when needed
    - Update for the latest plugin system

0.01  Thu Oct 23 2008
    - original version